# Lautset

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: analyze_clang-tidy.yml  build_linux.yml  build_mac.yml  build_windows.yml
cmake/: compiler_options.cmake  compiler_warnings.cmake
src/: Main.cpp  MainComponent.cpp  MainComponent.hpp
src/dsp/: BufferWithSampleRate.cpp  BufferWithSampleRate.hpp  Duration.hpp  LoudnessAnalysis.cpp  LoudnessAnalysis.hpp
